--- a/pymeteobridgeio/translations/pl.json
+++ b/pymeteobridgeio/translations/pl.json
@@ -31,5 +31,10 @@
         "WNW": "WNW",
         "NW": "NW",
         "NNW": "NNW"
+    },
+    "trend": {
+        "falling": "falling",
+        "rising": "rising",
+        "steady": "steady"
     }
 }
